--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -464,10 +464,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><span style="font-size:small;color:blue;">0.21 and below</span> Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> when pressing the mouse button to drag an object in a sketch in edit mode.
+<p><span style="font-size:small;color:blue;">0.21 and below</span> Podr&#382;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a stiskn&#283;te tla&#269;&iacute;tko my&scaron;i, abyste p&#345;et&aacute;hli objekt ve skice v re&#382;imu &uacute;prav.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="3">Use the mouse wheel to zoom in and out.
@@ -941,15 +939,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204804
+Cached time: 20260111204847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.281 seconds
-Real time usage: 0.794 seconds
-Preprocessor visited node count: 1512/1000000
-Post&#8208;expand include size: 73077/2097152 bytes
-Template argument size: 28012/2097152 bytes
+CPU time usage: 0.252 seconds
+Real time usage: 0.389 seconds
+Preprocessor visited node count: 1511/1000000
+Post&#8208;expand include size: 73040/2097152 bytes
+Template argument size: 27975/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -957,19 +955,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  144.977      1 -total
- 17.45%   25.299      1 Template:Userdocnavi/cs
- 14.98%   21.716      1 Template:Blender_Navigation
-  8.36%   12.119      1 Template:Navigation_menu_2
-  6.63%    9.610      1 Template:OpenSCAD_Navigation
-  6.23%    9.039      1 Template:Gesture_Navigation
-  6.03%    8.740      1 Template:Touchpad_Navigation/cs
-  5.91%    8.573      8 Template:ASCII
-  5.29%    7.662      1 Template:OpenInventor_Navigation
-  3.90%    5.656      1 Template:TinkerCAD_Navigation
+100.00%   97.728      1 -total
+ 12.04%   11.767      8 Template:ASCII
+  8.21%    8.020      1 Template:OpenSCAD_Navigation
+  6.69%    6.537      1 Template:Userdocnavi/cs
+  6.40%    6.250      1 Template:Touchpad_Navigation/cs
+  5.52%    5.390      1 Template:SolidWorks_Navigation
+  5.47%    5.345      1 Template:Revit_Navigation
+  5.38%    5.260      1 Template:TinkerCAD_Navigation
+  5.09%    4.973      1 Template:MayaGesture_Navigation
+  5.05%    4.939      1 Template:Blender_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204803 and revision id 1736149. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204847 and revision id 1736153. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
