--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -507,9 +507,8 @@
 </td>
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
-<td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td>
+<td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BRMB_hold.svg&amp;filetimestamp=20181210192958&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
@@ -517,8 +516,7 @@
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Use the mouse wheel to zoom in and out.
@@ -920,15 +918,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205242
+Cached time: 20260111205307
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.273 seconds
-Real time usage: 0.527 seconds
-Preprocessor visited node count: 1502/1000000
-Post&#8208;expand include size: 72745/2097152 bytes
-Template argument size: 27680/2097152 bytes
+CPU time usage: 0.337 seconds
+Real time usage: 0.592 seconds
+Preprocessor visited node count: 1501/1000000
+Post&#8208;expand include size: 72695/2097152 bytes
+Template argument size: 27630/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -936,19 +934,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  120.427      1 -total
- 12.87%   15.502      1 Template:Userdocnavi/cs
- 11.75%   14.145      8 Template:ASCII
-  9.81%   11.810      1 Template:CAD_Navigation
-  8.42%   10.142      1 Template:OpenSCAD_Navigation
-  5.32%    6.409      2 Template:Version
-  4.81%    5.798      1 Template:SiemensNX_Navigation
-  4.67%    5.623      1 Template:VersionMinus
-  4.34%    5.226      1 Template:Blender_Navigation
-  4.29%    5.162      1 Template:Touchpad_Navigation/cs
+100.00%  126.914      1 -total
+ 16.72%   21.226      1 Template:TOCright
+  9.80%   12.436      8 Template:ASCII
+  9.34%   11.848      1 Template:Userdocnavi/cs
+  7.52%    9.546      1 Template:OpenSCAD_Navigation
+  6.26%    7.949      1 Template:OpenInventor_Navigation
+  5.44%    6.902      1 Template:Blender_Navigation
+  5.36%    6.806     69 Template:KEY
+  4.15%    5.261      1 Template:VersionMinus
+  3.90%    4.950      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205241 and revision id 1736191. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205306 and revision id 1736193. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
