--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -517,10 +517,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Use the mouse wheel to zoom in and out.
-
+</td>
+<td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Clicking the middle mouse button re-centers the view on the location of the pointer.
 </p>
@@ -918,15 +916,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205307
+Cached time: 20260111205342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.337 seconds
-Real time usage: 0.592 seconds
-Preprocessor visited node count: 1501/1000000
-Post&#8208;expand include size: 72695/2097152 bytes
-Template argument size: 27630/2097152 bytes
+CPU time usage: 0.313 seconds
+Real time usage: 0.757 seconds
+Preprocessor visited node count: 1500/1000000
+Post&#8208;expand include size: 72664/2097152 bytes
+Template argument size: 27599/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -934,19 +932,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  126.914      1 -total
- 16.72%   21.226      1 Template:TOCright
-  9.80%   12.436      8 Template:ASCII
-  9.34%   11.848      1 Template:Userdocnavi/cs
-  7.52%    9.546      1 Template:OpenSCAD_Navigation
-  6.26%    7.949      1 Template:OpenInventor_Navigation
-  5.44%    6.902      1 Template:Blender_Navigation
-  5.36%    6.806     69 Template:KEY
-  4.15%    5.261      1 Template:VersionMinus
-  3.90%    4.950      2 Template:Version
+100.00%  204.823      1 -total
+ 11.63%   23.824      1 Template:Revit_Navigation
+ 11.50%   23.563      1 Template:OpenSCAD_Navigation
+ 10.22%   20.932      8 Template:ASCII
+ 10.09%   20.674      1 Template:Userdocnavi/cs
+  9.10%   18.635      1 Template:VersionMinus
+  6.05%   12.382      1 Template:TinkerCAD_Navigation
+  5.67%   11.612      1 Template:Blender_Navigation
+  4.94%   10.116      1 Template:SiemensNX_Navigation
+  4.63%    9.485      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205306 and revision id 1736193. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205341 and revision id 1736197. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
