--- a/wiki/de/TechDraw_Quadrants.html
+++ b/wiki/de/TechDraw_Quadrants.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Quadrants/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Quadrants&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Quadrants.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Quadrants (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Sommets quadrants (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Quadranti (69% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Dodaj wierzcho&#322;ki kwadrantu (69% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj wierzcho&#322;ki kwadrantu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; 4-&#1088;&#1077; &#1074;&#1077;&#1088;&#1096;&#1080;&#1085;&#1099; &#1087;&#1086; &#1082;&#1088;&#1072;&#1103;&#1084; &#1086;&#1082;&#1088;&#1091;&#1078;&#1085;&#1086;&#1089;&#1090;&#1080;" (38% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49324;&#48516;&#51216; (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Mittenpunkt</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Fl&auml;chenMittelLinie</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/de">HilfsobjektEntfernen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -140,35 +138,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151756
+Cached time: 20260111205459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.130 seconds
-Preprocessor visited node count: 337/1000000
-Post&#8208;expand include size: 27853/2097152 bytes
-Template argument size: 11073/2097152 bytes
+CPU time usage: 0.082 seconds
+Real time usage: 0.222 seconds
+Preprocessor visited node count: 336/1000000
+Post&#8208;expand include size: 27856/2097152 bytes
+Template argument size: 11075/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2232/5000000 bytes
+Unstrip post&#8208;expand size: 2239/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.296      1 -total
- 24.15%    7.800      1 Template:TechDraw_Tools_navi/de
- 12.38%    3.998      2 Template:Navigation_menu_2
- 11.90%    3.842      2 Template:Docnav/de
- 11.78%    3.805      1 Template:Userdocnavi/de
- 11.65%    3.761      1 Template:Version/de
-  8.52%    2.753      1 Template:GuiCommand/de
-  7.37%    2.379      1 Template:KEY
-  6.57%    2.122      1 Template:MenuCommand
-  5.50%    1.775      1 Template:Code
+100.00%   71.994      1 -total
+ 26.77%   19.272      1 Template:TechDraw_Tools_navi/de
+ 22.11%   15.916      1 Template:Caption
+ 14.70%   10.584      2 Template:Navigation_menu_2
+ 11.36%    8.182      1 Template:KEY
+  8.57%    6.169      1 Template:Userdocnavi/de
+  7.41%    5.337      1 Template:GuiCommand/de
+  5.39%    3.877      2 Template:Docnav/de
+  3.95%    2.844      1 Template:Button
+  3.06%    2.206      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111151756 and revision id 1734673. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205459 and revision id 1736201. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
