--- a/wiki/de/TechDraw_Quadrants.html
+++ b/wiki/de/TechDraw_Quadrants.html
@@ -94,14 +94,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Mittenpunkt</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Fl&auml;chenMittelLinie</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/de">HilfsobjektEntfernen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -138,15 +136,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205459
+Cached time: 20260111205506
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.222 seconds
-Preprocessor visited node count: 336/1000000
-Post&#8208;expand include size: 27856/2097152 bytes
-Template argument size: 11075/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.307 seconds
+Preprocessor visited node count: 335/1000000
+Post&#8208;expand include size: 27859/2097152 bytes
+Template argument size: 11077/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -154,19 +152,19 @@ Unstrip post&#8208;expand size: 2239/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.994      1 -total
- 26.77%   19.272      1 Template:TechDraw_Tools_navi/de
- 22.11%   15.916      1 Template:Caption
- 14.70%   10.584      2 Template:Navigation_menu_2
- 11.36%    8.182      1 Template:KEY
-  8.57%    6.169      1 Template:Userdocnavi/de
-  7.41%    5.337      1 Template:GuiCommand/de
-  5.39%    3.877      2 Template:Docnav/de
-  3.95%    2.844      1 Template:Button
-  3.06%    2.206      1 Template:MenuCommand
+100.00%   41.281      1 -total
+ 25.39%   10.483      1 Template:TechDraw_Tools_navi/de
+ 14.32%    5.910      1 Template:GuiCommand/de
+ 13.47%    5.559      1 Template:Version/de
+ 13.04%    5.383      2 Template:Navigation_menu_2
+  9.48%    3.912      1 Template:Userdocnavi/de
+  9.14%    3.775      1 Template:Code
+  7.23%    2.983      1 Template:Caption
+  6.73%    2.779      2 Template:Docnav/de
+  4.21%    1.737      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205459 and revision id 1736201. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205505 and revision id 1736203. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
